Fix link decoration on mobile
#99

--- a/app/javascript/components/Navigation/SideNavigation/SideNavigation.sass
+++ b/app/javascript/components/Navigation/SideNavigation/SideNavigation.sass
@@ -42,9 +42,11 @@
     text-decoration: none
     font-size: 18px
     color: $black
-    //&:focus
-    //    text-decoration: none
-    //    color: $menu-color
+    &:hover, &:active, &:visited, &:focus
+        text-decoration: none
+        color: black
+    &:active
+        color: $menu-color
 
 .linkActive
     background-color: $lightGrey
